--- a/config/database.yml
+++ b/config/database.yml
@@ -19,9 +19,9 @@ test: &test
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
+  adapter: postgresql
+  database:
+  pool:
   timeout: 5000
 
 cucumber:
