--- a/config/application.yml
+++ b/config/application.yml
@@ -1,2 +1,2 @@
-# LINKEDIN_API_KEY: aglkd3a476p2
-# LINKEDIN_API_SECRET: bRsZRj2XrtXy6GNE
+LINKEDIN_API_KEY: aglkd3a476p2
+LINKEDIN_API_SECRET: bRsZRj2XrtXy6GNE
