--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
-config/envfile
+config/application.yml
 
 # Ignore bundler config.
 /.bundle
